plugins {
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.0'
	id 'java'
}

group = 'com.gonggam'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '21'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'javax.servlet:javax.servlet-api:4.0.1'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.projectlombok:lombok'
	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0' // 최신 버전으로 수정 가능
	implementation 'org.hibernate:hibernate-core:6.2.4.Final' // 최신 버전으로 수정 가능
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile) {
	options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test) {
	jvmArgs += ['--enable-preview']
}

tasks.withType(JavaExec) {
	jvmArgs += ['--enable-preview']
}